[project]
name = "cli-ai-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "emoji>=2.14.1",
    "inquirer>=3.4.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "typer>=0.15.3",
    "yaspin>=3.1.0",
]
